# roo-code-bridge

./: .gitignore  PHASE1_STATUS.md  PHASE2_IMPLEMENTATION_DETAILS.md  PHASE2_PLAN.md  README.md  TEST_RESULTS.md  demo_phase1.py  pyproject.toml  send_flappy_bird_chat.py  send_flappy_bird_message.py  send_natural_message.py  start_bridge.sh  test_extension.py  test_final_success.py  test_integration_simple.py  test_quick_verification.py  test_roo_code_api.py  test_roo_code_api_auth.py
extension/: package-lock.json  package.json
extension/src/: extension.ts  ipc-server.ts  roo-code-interface.ts  types.ts
roo-bridge-test/: README.md  README_PLAN.md  install_and_test.sh  install_in_cursor.sh  next_steps.md  test_in_cursor.py  test_roo_connection.py
roo-bridge-test/extension/: package-lock.json  package.json
roo-bridge-test/extension/src/: extension.ts
scripts/: check_capabilities.py  check_roo_code_extensions.py  send_roo_code_runtask.py  send_roo_code_task.py
server/: requirements.txt  show_config.py  test_correct_ipc.py  test_final_integration.py  test_full_integration.py  test_raw_tcp.py  test_roo_code_status.py  test_with_auth.py
server/scripts/: check_extension_version.py  demo_phase2.py  demo_usage.py  inspect_config.py
server/src/: main.py
server/src/adapters/: base.py  roo_code.py
server/src/api/: auth.py  config.py  messages.py  tasks.py  tools.py
server/tests/: test_direct_roo_code.py  test_ipc_connection.py  test_live.py  test_new_capabilities.py  test_phase1.py  test_phase2.py  test_qwen_config.py  test_server_only.py
(+8 files in other folders)
